Walls, Backgrounds, etc..

--- a/Flux/Flux/Flux.csproj
+++ b/Flux/Flux/Flux.csproj
@@ -60,6 +60,10 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FarseerPhysicsXNA, Version=3.3.4629.37410, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\FarseerPhysicsXNA.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
     </Reference>
@@ -110,14 +114,17 @@
   <ItemGroup>
     <Compile Include="Managers\SpriteManager.cs" />
     <Compile Include="Managers\TextureManager.cs" />
+    <Compile Include="Model\Sprites\Background.cs" />
     <Compile Include="Model\Sprites\BallSprite.cs" />
     <Compile Include="Model\Sprites\Sprite.cs" />
+    <Compile Include="Model\Sprites\WallSprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="FluxGame.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="FarseerPhysicsXNA.dll" />
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
