--- a/Flux/Flux/Flux.csproj
+++ b/Flux/Flux/Flux.csproj
@@ -114,6 +114,7 @@
   <ItemGroup>
     <Compile Include="Managers\SpriteManager.cs" />
     <Compile Include="Managers\TextureManager.cs" />
+    <Compile Include="Model\Player.cs" />
     <Compile Include="Model\Sprites\Background.cs" />
     <Compile Include="Model\Sprites\BallSprite.cs" />
     <Compile Include="Model\Sprites\Sprite.cs" />
