--- a/Flux/Flux/Flux.csproj
+++ b/Flux/Flux/Flux.csproj
@@ -112,6 +112,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Display\Camera.cs" />
     <Compile Include="Managers\SpriteManager.cs" />
     <Compile Include="Managers\TextureManager.cs" />
     <Compile Include="Model\Player.cs" />
