--- a/Flux/Flux/Flux.csproj
+++ b/Flux/Flux/Flux.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Display\FPSComponent.cs" />
     <Compile Include="Display\HUD.cs" />
     <Compile Include="Display\SpeedComponent.cs" />
+    <Compile Include="Display\ToolBox.cs" />
     <Compile Include="Managers\Settings.cs" />
     <Compile Include="Managers\SpriteManager.cs" />
     <Compile Include="Managers\ContentManager.cs" />
@@ -133,13 +134,15 @@
     <Compile Include="Model\Sprites\BallSprite.cs" />
     <Compile Include="Model\Sprites\PhysicsSprite.cs" />
     <Compile Include="Model\Sprites\Shapes\EqualTriangle.cs" />
-    <Compile Include="Model\Sprites\Shapes\Shape.cs" />
+    <Compile Include="Model\Sprites\Shapes\Tool.cs" />
     <Compile Include="Model\Sprites\Sprite.cs" />
     <Compile Include="Model\Sprites\WallSprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="FluxGame.cs" />
-    <Compile Include="Utils.cs" />
+    <Compile Include="Utils\TextureUtils.cs" />
+    <Compile Include="Utils\PhysicsUtils.cs" />
+    <Compile Include="Utils\VectorUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="FarseerPhysicsXNA.dll" />
