--- a/Flux/Flux/Flux.csproj
+++ b/Flux/Flux/Flux.csproj
@@ -62,7 +62,7 @@
   <ItemGroup>
     <Reference Include="FarseerPhysicsXNA, Version=3.3.4629.37410, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\FarseerPhysicsXNA.dll</HintPath>
+      <HintPath>..\..\..\Box2D.XNA\Farseer Physics Engine 3.3 XNA\bin\x86\Debug\FarseerPhysicsXNA.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
@@ -132,6 +132,7 @@
     <Compile Include="Model\Player.cs" />
     <Compile Include="Model\Sprites\Background.cs" />
     <Compile Include="Model\Sprites\BallSprite.cs" />
+    <Compile Include="Model\Sprites\Blocks\Block.cs" />
     <Compile Include="Model\Sprites\Blocks\EqualTriangleBlock.cs" />
     <Compile Include="Model\Sprites\PhysicsSprite.cs" />
     <Compile Include="Model\Sprites\Tools\EqualTriangleTool.cs" />
@@ -146,7 +147,6 @@
     <Compile Include="Utils\VectorUtils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="FarseerPhysicsXNA.dll" />
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
