--- a/Flux/Flux/Flux.csproj
+++ b/Flux/Flux/Flux.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Model\Sprites\BallSprite.cs" />
     <Compile Include="Model\Sprites\Blocks\Block.cs" />
     <Compile Include="Model\Sprites\Blocks\EqualTriangleBlock.cs" />
+    <Compile Include="Model\Sprites\MoveOverlaySprite.cs" />
     <Compile Include="Model\Sprites\PhysicsSprite.cs" />
     <Compile Include="Model\Sprites\RotationOverlaySprite.cs" />
     <Compile Include="Model\Sprites\Tools\EqualTriangleTool.cs" />
