--- a/Flux/Flux/Flux.csproj
+++ b/Flux/Flux/Flux.csproj
@@ -18,6 +18,7 @@
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -30,7 +31,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -115,6 +115,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Display\Camera.cs" />
+    <Compile Include="Display\FarseerPhysicsDebugViewXNA.cs" />
+    <Compile Include="Display\Screen Componenets\CursorLocationComponent.cs" />
     <Compile Include="Display\Cursor.cs" />
     <Compile Include="Display\DebugForm.cs">
       <SubType>Form</SubType>
@@ -122,9 +124,9 @@
     <Compile Include="Display\DebugForm.Designer.cs">
       <DependentUpon>DebugForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Display\FPSComponent.cs" />
+    <Compile Include="Display\Screen Componenets\FPSComponent.cs" />
     <Compile Include="Display\HUD.cs" />
-    <Compile Include="Display\SpeedComponent.cs" />
+    <Compile Include="Display\Screen Componenets\SpeedComponent.cs" />
     <Compile Include="Display\ToolBox.cs" />
     <Compile Include="Managers\Settings.cs" />
     <Compile Include="Managers\SpriteManager.cs" />
@@ -144,6 +146,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="FluxGame.cs" />
+    <Compile Include="Utils\PrimitiveBatch.cs" />
     <Compile Include="Utils\TextureUtils.cs" />
     <Compile Include="Utils\PhysicsUtils.cs" />
     <Compile Include="Utils\VectorUtils.cs" />
