--- a/Flux/Flux/Flux.csproj
+++ b/Flux/Flux/Flux.csproj
@@ -114,7 +114,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Display\Camera.cs" />
     <Compile Include="Display\FarseerPhysicsDebugViewXNA.cs" />
     <Compile Include="Display\Screen Componenets\CursorLocationComponent.cs" />
     <Compile Include="Display\Cursor.cs" />
@@ -125,38 +124,33 @@
       <DependentUpon>DebugForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Display\Screen Componenets\FPSComponent.cs" />
-    <Compile Include="Display\HUD.cs" />
     <Compile Include="Display\Screen Componenets\SpeedComponent.cs" />
     <Compile Include="Display\ToolBox.cs" />
+    <Compile Include="Entities\Sprites\Blocks\Block.cs" />
+    <Compile Include="Entities\Sprites\Tools\Tool.cs" />
     <Compile Include="Managers\Settings.cs" />
-    <Compile Include="Managers\SpriteManager.cs" />
     <Compile Include="Managers\ContentManager.cs" />
-    <Compile Include="Model\Player.cs" />
-    <Compile Include="Model\Sprites\Background.cs" />
-    <Compile Include="Model\Sprites\BallSprite.cs" />
-    <Compile Include="Model\Sprites\Blocks\Block.cs" />
-    <Compile Include="Model\Sprites\Blocks\EqualTriangleBlock.cs" />
-    <Compile Include="Model\Sprites\MoveOverlaySprite.cs" />
-    <Compile Include="Model\Sprites\PhysicsSprite.cs" />
-    <Compile Include="Model\Sprites\RotationOverlaySprite.cs" />
-    <Compile Include="Model\Sprites\Tools\EqualTriangleTool.cs" />
-    <Compile Include="Model\Sprites\Tools\Tool.cs" />
-    <Compile Include="Model\Sprites\Sprite.cs" />
-    <Compile Include="Model\Sprites\WallSprite.cs" />
+    <Compile Include="Entities\Player.cs" />
+    <Compile Include="Entities\Sprites\Background.cs" />
+    <Compile Include="Entities\Sprites\BallSprite.cs" />
+    <Compile Include="Entities\Sprites\Blocks\EqualTriangleBlock.cs" />
+    <Compile Include="Entities\Sprites\MoveOverlaySprite.cs" />
+    <Compile Include="Entities\Sprites\RotationOverlaySprite.cs" />
+    <Compile Include="Entities\Sprites\Tools\EqualTriangleTool.cs" />
+    <Compile Include="Entities\Sprites\WallSprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="FluxGame.cs" />
-    <Compile Include="Utils\PrimitiveBatch.cs" />
-    <Compile Include="Utils\TextureUtils.cs" />
-    <Compile Include="Utils\PhysicsUtils.cs" />
-    <Compile Include="Utils\VectorUtils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Externs\FarseerPhysicsXNA.dll" />
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\FluxEngine\FluxEngine.csproj">
+      <Project>{6F62BBEF-7308-4A0F-8C59-DDE087E29F2D}</Project>
+      <Name>FluxEngine</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FluxContent\FluxContent.contentproj">
       <Name>FluxContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
