--- a/FluxEngine/FluxEngine.csproj
+++ b/FluxEngine/FluxEngine.csproj
@@ -43,6 +43,10 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FarseerPhysicsXNA, Version=3.3.4638.12716, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Externs\FarseerPhysicsXNA.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
     </Reference>
@@ -76,6 +80,7 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
@@ -92,7 +97,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseFluxGame.cs" />
+    <Compile Include="Display\Camera.cs" />
+    <Compile Include="Display\HUD.cs" />
+    <Compile Include="Managers\SpriteManager.cs" />
+    <Compile Include="Entity\PhysicsSprite.cs" />
+    <Compile Include="Entity\Sprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\PhysicsUtils.cs" />
+    <Compile Include="Utils\PrimitiveBatch.cs" />
+    <Compile Include="Utils\TextureUtils.cs" />
+    <Compile Include="Utils\VectorUtils.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Externs\FarseerPhysicsXNA.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
