--- a/FluxEngine/FluxEngine.csproj
+++ b/FluxEngine/FluxEngine.csproj
@@ -100,9 +100,12 @@
     <Compile Include="BaseFluxGame.cs" />
     <Compile Include="Display\Camera.cs" />
     <Compile Include="Display\HUD.cs" />
+    <Compile Include="Display\UI\Button.cs" />
+    <Compile Include="Display\UI\View.cs" />
     <Compile Include="Managers\SpriteManager.cs" />
     <Compile Include="Entity\PhysicsSprite.cs" />
     <Compile Include="Entity\Sprite.cs" />
+    <Compile Include="Managers\ViewManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\PhysicsUtils.cs" />
     <Compile Include="Utils\PrimitiveBatch.cs" />
