--- a/FluxEngine/FluxEngine.csproj
+++ b/FluxEngine/FluxEngine.csproj
@@ -43,9 +43,9 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FarseerPhysicsXNA, Version=3.3.4638.12716, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="FarseerPhysics XNA, Version=3.5.0.15080, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>Externs\FarseerPhysicsXNA.dll</HintPath>
+      <HintPath>Externs\FarseerPhysics XNA.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
@@ -112,8 +112,10 @@
     <Compile Include="Utils\TextureUtils.cs" />
     <Compile Include="Utils\VectorUtils.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Content Include="Externs\FarseerPhysicsXNA.dll" />
+    <Content Include="Externs\FarseerPhysics Xbox360.dll" />
+    <Content Include="Externs\FarseerPhysics XNA.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
